tests/samples/negative/functions/variadic_not_last.ax
module variadic_not_last;

extern c {
    fn bad(..., value: i32) -> i32 @name("bad");
}

fn main() -> i32 {
    return 0;
}
